<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fe_trivia_question_details_root_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:clickable="true"
    android:importantForAccessibility="no"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/fe_trivia_question_details_contents_container_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fe_trivia_question_details_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/fe_trivia_question_details_contents_container_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fe_trivia_question_details_question_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_title2_text"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"/>

            <EditText
                android:id="@+id/fe_trivia_question_details_question_content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:hint="@string/question_hint_text"
                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                android:background="@drawable/bg_edit_box_1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="20dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fe_trivia_question_details_answer_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_title_text"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"/>

            <EditText
                android:id="@+id/fe_trivia_question_details_answer_content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:hint="@string/answer_hint_text"
                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                android:background="@drawable/bg_edit_box_1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="20dp"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fe_trivia_question_details_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/fe_trivia_question_details_contents_container_constraint_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>