<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fe_trivia_questions_list_item_root_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_button_1">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fe_trivia_questions_list_item_question_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fe_trivia_questions_list_item_guideline_1"
        tools:text="@string/question_title_text"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fe_trivia_questions_list_item_question_content_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="40dp"
        app:layout_constraintTop_toBottomOf="@+id/fe_trivia_questions_list_item_question_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fe_trivia_questions_list_item_guideline_1"
        tools:text="@string/demo_question_text"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fe_trivia_questions_list_item_answer_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/answer_title_text"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="10dp"
        android:paddingEnd="30dp"
        android:paddingTop="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fe_trivia_questions_list_item_guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fe_trivia_questions_list_item_answer_content_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:paddingStart="10dp"
        android:paddingEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/fe_trivia_questions_list_item_answer_title_text_view"
        app:layout_constraintStart_toEndOf="@+id/fe_trivia_questions_list_item_guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/demo_answer_text"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fe_trivia_questions_list_item_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button_text"
        android:textSize="13dp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toTopOf="@+id/fe_trivia_questions_list_item_separator_view"
        app:layout_constraintBottom_toBottomOf="@+id/fe_trivia_questions_list_item_separator_view"
        app:layout_constraintStart_toEndOf="@+id/fe_trivia_questions_list_item_guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpUsage"/>

    <View
        android:id="@+id/fe_trivia_questions_list_item_separator_view"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorGray"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fe_trivia_questions_list_item_guideline_1"
        app:layout_constraintEnd_toEndOf="@+id/fe_trivia_questions_list_item_guideline_1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fe_trivia_questions_list_item_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>